--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
   "description": "I hate to type <strong>...</strong> so I created an extension which strongify a text in HTML/JSX pages",
   "version": "0.1.0",
   "engines": {
-    "vscode": "^1.97.0"
+    "vscode": "^1.90.0"
   },
   "categories": [
     "Other"
+  ],
+  "license": "MIT",
+  "icon": "./assets/logo.png",
+  "keywords": [
+    "html",
+    "tag",
+    "strong",
+    "italic",
+    "tagify"
   ],
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "strongify.helloWorld",
-        "title": "Hello World"
+        "command": "strongify.strong",
+        "title": "Strongify: strong"
+      },
+      {
+        "command": "strongify.italic",
+        "title": "Strongify: italic"
       }
     ]
   },
