--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "categories": [
     "Other"
   ],
+  "publisher": "veeso",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/veeso/strongify"
+  },
   "license": "MIT",
   "icon": "./assets/logo.png",
   "keywords": [
@@ -48,7 +53,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "@types/vscode": "^1.97.0",
+    "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vscode/test-cli": "^0.0.10",
